prometheus/gateway.yml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: prometheus-ingress-gateway
  namespace: istio-system
spec:
  selector:
    app: istio-ingressgateway
    istio: ingressgateway 
  servers:
    - port:
        number: 31400
        name: http-prometheus
        protocol: HTTP
      hosts:
        - "*"
